@@ -1,3 +1,8 @@
+80
+
+* Add /me support
+* Use a bit more of the roundbox width for the text message
+
 79
 
 * GTK3 update by Flavio
